--- a/anime-front/index.html
+++ b/anime-front/index.html
@@ -1,18 +1,52 @@
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/estilos.css">
+    <link rel="stylesheet" href="./assets/css/responsivo.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sei la</title>
+    <title>jujutsu kaisen</title>
 </head>
+
 <body>
     <header>
 
     </header>
-    <main>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim omnis sunt aperiam veritatis. Neque tempora nesciunt perferendis illum dignissimos sunt, inventore magni reiciendis provident, ex maiores deleniti dolore magnam maxime?
+    <main class="personagens">
+        <div class="personagem selecionado">
+            <img class="imagem" src="./assets/img/jujutsu kaisen-Satoru Gojo.jpg" alt="personagem Satoru Gojo">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Satoru Gojo</h2>
+                <p class="descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere optio fugiat voluptatum, et sunt asperiores doloribus nam ad vero exercitationem numquam dicta accusantium qui deleniti, maxime officiis placeat debitis quibusdam?</p>
+            </div>
+        </div>
+        <div class="personagem ">
+            <img class="imagem" src="./assets/img/" alt="personagem Satoru Gojo">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Satoru Gojo</h2>
+                <p class="descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere optio fugiat voluptatum, et sunt asperiores doloribus nam ad vero exercitationem numquam dicta accusantium qui deleniti, maxime officiis placeat debitis quibusdam?</p>
+            </div>
+        </div>
+
     </main>
+    <ul class="botoes">
+        <li>
+            <button class="botao selecionado">
+                <img src="./assets/css/" alt="icon Satoru Gojo">
+            </button>
+        </li>
+        <li>
+            <button class="botao">
+                <img src="./assets/css/" alt="icon Satoru Gojo">
+            </button>
+        </li>
+    </ul>
     <footer>
 
     </footer>
 </body>
+
 </html>
