--- a/anime-front/index.html
+++ b/anime-front/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
     <main class="personagens">
         <div class="personagem selecionado">
             <img class="imagem" src="./assets/img/jujutsu kaisen-Satoru Gojo.jpg" alt="personagem Satoru Gojo">
@@ -23,10 +20,26 @@
             </div>
         </div>
         <div class="personagem ">
-            <img class="imagem" src="./assets/img/" alt="personagem Satoru Gojo">
+            <img class="imagem" src="./assets/img/jujutsu-kaisen-itadori-yuji.jpg" alt="personagem Yuji Itadori">
             <div class="conteudo">
                 <i class="logo"></i>
-                <h2 class="nome-personagem">Satoru Gojo</h2>
+                <h2 class="nome-personagem">Yuji Itadori</h2>
+                <p class="descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere optio fugiat voluptatum, et sunt asperiores doloribus nam ad vero exercitationem numquam dicta accusantium qui deleniti, maxime officiis placeat debitis quibusdam?</p>
+            </div>
+        </div>
+        <div class="personagem ">
+            <img class="imagem" src="./assets/img/jujutsu-kaisen-nobara-kugisaki.jpg" alt="personagem Nobara Kugisaki">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Nobara Kugisaki</h2>
+                <p class="descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere optio fugiat voluptatum, et sunt asperiores doloribus nam ad vero exercitationem numquam dicta accusantium qui deleniti, maxime officiis placeat debitis quibusdam?</p>
+            </div>
+        </div>
+        <div class="personagem ">
+            <img class="imagem" src="./assets/img/jujutsu-kaisen-megumi-fushiguro.jpg" alt="personagem Megumi Fushiguro">
+            <div class="conteudo">
+                <i class="logo"></i>
+                <h2 class="nome-personagem">Megumi Fushiguro</h2>
                 <p class="descricao">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere optio fugiat voluptatum, et sunt asperiores doloribus nam ad vero exercitationem numquam dicta accusantium qui deleniti, maxime officiis placeat debitis quibusdam?</p>
             </div>
         </div>
@@ -40,13 +53,20 @@
         </li>
         <li>
             <button class="botao">
-                <img src="./assets/css/" alt="icon Satoru Gojo">
+                <img src="./assets/css/" alt="icon Yuji Itadori">
+            </button>
+        </li>
+        <li>
+            <button class="botao">
+                <img src="./assets/css/" alt="icon Nobara Kugisaki">
+            </button>
+        </li>
+        <li>
+            <button class="botao">
+                <img src="./assets/css/" alt="icon Megumi Fushiguro">
             </button>
         </li>
     </ul>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
