--- a/anime-front/index.html
+++ b/anime-front/index.html
@@ -47,26 +47,27 @@
     </main>
     <ul class="botoes">
         <li>
-            <button class="botao selecionado">
+            <button class="botao" id="Gojo">
                 <img src="./assets/css/" alt="icon Satoru Gojo">
             </button>
         </li>
         <li>
-            <button class="botao">
+            <button class="botao" id="Itadori">
                 <img src="./assets/css/" alt="icon Yuji Itadori">
             </button>
         </li>
         <li>
-            <button class="botao">
+            <button class="botao" id="Nobara">
                 <img src="./assets/css/" alt="icon Nobara Kugisaki">
             </button>
         </li>
         <li>
-            <button class="botao">
+            <button class="botao" id="Megumi">
                 <img src="./assets/css/" alt="icon Megumi Fushiguro">
             </button>
         </li>
     </ul>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
